fix(Message): add text-align: center

--- a/src/layout/Message/style.module.css
+++ b/src/layout/Message/style.module.css
@@ -2,7 +2,9 @@
     width: 100%;
     padding: 1em;
     border:  1px solid #000;
-    margin: 0 auto;
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
     margin-bottom: 2em;
     border-radius: 5px;
 }
